# api

./: .gitignore  .gitmodules  CMakeLists.txt  about.md  commit.bat  mod.json
.github/workflows/: build.yml  update.yml
checksum/: CMakeLists.txt  checksum.cpp  checksum.hpp
include/: APIMacros.hpp  Events.hpp  GeodeAPI  GeodeAPI.hpp  Notifications.hpp
include/dispatch/: ExtMouseDispatcher.hpp  ExtMouseManager.hpp  MacMouseEvent.hmm
include/dragdrop/: DragDropDelegate.hpp  DragDropManager.hpp
include/events/: DispatchEvent.hpp  DragDropEvent.hpp  Event.hpp  EventAction.hpp  EventCenter.hpp  EventProtocol.hpp  MouseEvent.hpp  ShortcutEvent.hpp
include/general/: Notification.hpp  Ref.hpp  SceneManager.hpp  TextRenderer.hpp
include/keybinds/: Keybind.hpp  KeybindManager.hpp  MouseButton.hpp
include/nodes/: BMFontRenderer.hpp  BasedButton.hpp  BasedButtonSprite.hpp  FontRenderer.hpp  IconButtonSprite.hpp  Input.hpp  InputNode.hpp  ListView.hpp  MDTextArea.hpp  MenuInputNode.hpp  Popup.hpp  RichTextArea.hpp  ScrollLayer.hpp  Scrollbar.hpp  TextRenderer.hpp
include/settings/: CustomSettingNode.hpp  Setting.hpp  SettingNode.hpp  SettingNodeManager.hpp
include/shortcuts/: MouseEvent.hpp  Shortcut.hpp  ShortcutAction.hpp  ShortcutManager.hpp  Shortcuts.hpp
include/views/: BasicViews.hpp  View.hpp
md4c/: CMakeLists.txt
md4c/src/: CMakeLists.txt
resources/blanks/: .GEODE_blank00_07_02-uhd-.png-autosave.kra  GEODE_blank00_00_01-uhd.png~  GEODE_blank00_01_01-uhd.png~  GEODE_blank00_01_02-uhd.png~  GEODE_blank00_02_02-uhd.png~  GEODE_blank00_04_00-uhd.png~  GEODE_blank00_04_03-uhd.png~  GEODE_blank00_05_00-uhd.png~  GEODE_blank00_06_00-uhd.png~  GEODE_blank00_06_04-uhd.png~  GEODE_blank00_07_02-uhd.png~  GEODE_blank02_00_00-uhd.png~  GEODE_blank05_00_00-uhd.png~  GEODE_blank05_00_03-uhd.png~  GEODE_blank05_00_08-uhd.png~
src/: APIInternal.cpp  APIInternal.hpp  DragDropManager.cpp  GeodeAPI.cpp  Keybind.cpp  KeybindAction.cpp  KeybindManager.cpp  defaultBinds.cpp  main.cpp
src/dispatch/: ExtMouseDispatcher.cpp  ExtMouseManager.cpp  MacMouseEvent.mm  ccCArray.cpp
src/events/: DragDropEvent.cpp  Event.cpp  EventAction.cpp  EventCenter.cpp  EventProtocol.cpp  MouseEvent.cpp
src/general/: Notification.cpp  SceneManager.cpp  TextRenderer.cpp
src/hooks/: LoadingLayer.cpp  MenuLayer.cpp  PauseLayer.cpp  dispatchMsg.cpp  hook.hpp  keyDownUp.cpp  objcHook.mm  persist.cpp  shortcuts.cpp
src/index/: Index.cpp  Index.hpp  InstallTicket.cpp  fetch.hpp
src/nodes/: BMFontRenderer.cpp  BasedButton.cpp  BasedButtonSprite.cpp  FontRenderer.cpp  IconButtonSprite.cpp  Input.cpp  InputNode.cpp  ListView.cpp  MDTextArea.cpp  MenuInputNode.cpp  (+5 more)
(+34 files in other folders)
